2000-07-27  Mo DeJong  <mdejong@redhat.com>

	* win/configure.in: TCL_STUB_LIB_FLAG should not
	include ${TCL_DBGX} in win/tclConfig.sh, fix that.

2000-07-25  David Gravereaux  <davygrvy@ajubasolutions.com>

	* doc/Async.3:
	* generic/tclAsync.c:
	* generic/tclInt.decls:
	* generic/tclIntPlatDecls.h:
	* generic/tclStubInit.c:
	* generic/tclTest.c:
	* mac/tclMacPort.h:
	* unix/tclUnixPort.h:
	* win/tclWinInit.c:  Thread-safe rewrite for tclAsync.c.  Added
	notifier alerting on all platforms as it was only working on Win
	before.  Removed older Win hacks that would end-up waking the
	wrong notifier in the presence of a threaded build.  All tests
	pass as before.  New test cases will be added soon for the new
	behavior.  [BUG: 5791]

2000-07-25  Eric Melski  <ericm@ajubasolutions.com>

	* generic/tclVar.c (CallTraces): Added check for VAR_TRACE_ACTIVE
	on the array containing the variable before executing traces on
	that array, to conform with normal variable traces and the
	documentation, which states that while executing a trace, other
	traces on that variable are disabled. [Bug: 6049].

	* win/tclWinPipe.c (BuildCommandLine): Added Tcl_DStringFree call
	to prevent potential memory leaks [Bug: 6041].

2000-07-24  Eric Melski  <ericm@ajubasolutions.com>

	* doc/msgcat.n: Added documentation about the selection of the
	default locale on Windows.

2000-07-23  Joe English  <jenglish@flightlab.com>
	* doc/AddErrInfo.3:
	* doc/ChnlStack.3:
	* doc/Exit.3:
	* doc/GetIndex.3:
	* doc/Notifier.3:
	* doc/Object.3:
	* doc/RegExp.3:
	* doc/SetResult.3:
	* doc/SplitList.3:
	* doc/Thread.3:  Added missing entries to NAME section.

	* doc/AddErrInfo.3:
	* doc/CrtObjCmd.3:
	* doc/RecEvalObj.3: Changed Tcl_EvalObj to Tcl_EvalObjEx

2000-07-21  Eric Melski  <ericm@ajubasolutions.com>

	* generic/tclStubInit.c: 
	* generic/tclObj.c: 
	* generic/tclInt.h: 
	* generic/tclHash.c: 
	* generic/tclDecls.h: 
	* generic/tcl.h: 
	* generic/tcl.decls: 