@@ -1,3 +1,15 @@
+2000-08-07  Eric Melski  <ericm@ajubasolutions.com>
+
+	* tests/indexObj.test: Added tests using the [testwrongnumargs]
+	command to test Tcl_WrongNumArgs.
+
+	* generic/tclTest.c (TestWrongNumArgsObjCmd): Added test function
+	for the Tcl_WrongNumArgs function.
+
+	* generic/tclIndexObj.c (Tcl_WrongNumArgs): Corrected algorithm to
+	not insert a space before the message component when objc == 0
+	[Bug: 6078].
+
 2000-07-27  Mo DeJong  <mdejong@redhat.com>
 
 	* win/configure.in: TCL_STUB_LIB_FLAG should not
